--- a/docker/nodejs/Dockerfile
+++ b/docker/nodejs/Dockerfile
@@ -5,6 +5,8 @@ ENV https_proxy http://10.78.17.6:3128
 
 WORKDIR /app
 
+RUN npm config set registry http://registry.npmjs.org
+
 COPY ./entrypoint.sh /
 
 ENTRYPOINT ["/entrypoint.sh"]
