--- a/docker/nodejs/Dockerfile
+++ b/docker/nodejs/Dockerfile
@@ -3,10 +3,11 @@ FROM node:7.2
 ENV http_proxy http://10.78.17.6:3128
 ENV https_proxy http://10.78.17.6:3128
 
-WORKDIR /app
+COPY ./package.json /tmp
 
-RUN npm config set registry http://registry.npmjs.org
+RUN npm config set registry http://registry.npmjs.org && cd /tmp && npm install
+
+WORKDIR /src
 
 COPY ./entrypoint.sh /
-
 ENTRYPOINT ["/entrypoint.sh"]
